deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginxhello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginxdemo
  template:
    metadata:
      labels:
        app: nginxdemo
    spec:
      containers:
      - name: nginxdemo
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
