svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginxhello-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginxdemo
